[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
blockchain = { path = "../blockchain" }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }

[[bin]]
name = "blockchain"
path = "./src/main.rs"
